--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.0.1
-python-dotenv==0.19.0
-openai==0.27.0
-Pillow==9.5.0
+Flask==3.0.0
+python-dotenv==1.0.0
+openai==1.3.7
+Pillow==10.1.0
 piexif==1.1.3
-tweepy==4.12.0
+tweepy==4.14.0
 elevenlabs==0.2.27
 gunicorn==21.2.0
-gevent==23.9.1 
+gevent==23.9.1
+Werkzeug==3.0.1 
