--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ gevent==24.2.1
 Werkzeug==3.0.1
 requests>=2.31.0
 urllib3>=2.0.7
-certifi>=2023.7.22 
+certifi>=2023.7.22
+Jinja2>=3.1.3
+MarkupSafe>=2.1.5
+cryptography>=42.0.5
+setuptools>=69.1.1
