--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ Jinja2>=3.1.3
 MarkupSafe>=2.1.5
 cryptography>=42.0.5
 setuptools>=69.1.1
+tornado>=6.3.3
+aiohttp>=3.9.2
+ipython>=8.10.0
+jupyter-core>=4.11.2
+notebook>=6.4.12
