--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: darkforest-interactive
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --log-level debug --chdir /opt/render/project/src
+    pythonVersion: 3.11.0
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
