--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,9 @@ services:
     name: darkforest-interactive
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --log-level debug --chdir /opt/render/project/src
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120 --workers 4 --log-level debug
     pythonVersion: 3.11.0
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
       - key: FLASK_APP
         value: app.py
       - key: FLASK_ENV
