--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120 --workers 4 --log-level debug
     pythonVersion: 3.11.0
     envVars:
+      - key: PORT
+        value: "10000"
       - key: FLASK_APP
         value: app.py
       - key: FLASK_ENV
