Add detailed logging and update worker configuration

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: darkforest-interactive
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: "gunicorn --bind=0.0.0.0:$PORT --timeout 120 --workers 1 app:app"
-    pythonVersion: 3.11.0
+    startCommand: "gunicorn --bind=0.0.0.0:$PORT --timeout 120 --workers 4 --threads 2 --log-level debug app:app"
+    pythonVersion: 3.11.8
     envVars:
       - key: FLASK_APP
         value: app.py
